# lite

./: .gitignore  README.md  environment.yaml  pyproject.toml
docs/: config.md  generate_docs.sh  introduction.md  multiprocessing.md  observables.md  operators.md  state.md  todo.md
docs/doxygen/: Doxyfile
docs/html/: doxygen_crawl.html  index.html  index.js  md__2_users_2christoph_2github_2local__information_2docs_2config.html  md__2_users_2christoph_2github_2local__information_2docs_2multiprocessing.html  md__2_users_2christoph_2github_2local__information_2docs_2operators.html  md__2_users_2christoph_2local-information_2local__information_2docs_2config.html  navtreedata.js  navtreeindex0.js  observables.html  pages.html  state.html
examples/: __init__.py  dissipative_dynamics.py  initialize_operators.py
examples/NV_dynamics/: load_and_continue.py  load_and_plot_data.py  nv_gradient_field_diffusion.py
examples/dipole_mixing/: dipole_mixing.py
examples/domain_wall/: domain_wall.py  load_and_plot.py
examples/paper/: mixed_field_ising_model.py  xx_dissipative_spin_chain.py
src/local_information/: __init__.py  lindblad_evolution.py  system.py  time_evolution.py  typedefs.py
src/local_information.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_lindbladian_evolution.py  test_time_evolution.py
tests/config/: test_config.py  test_monitor.py
tests/core/: test_petz_map.py  test_utils.py
tests/lattice/: test_lattice_dict.py
tests/mpi/: test_compute_von_Neumann_information.py  test_conjugate_gradient_fixed_current.py  utils.py  (+4 more)
(+87 files in other folders)
