[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "local_information"
version = "1.0.0"
description = "Python implementation of Local Information Time Evolution (LITE)"
requires-python = ">=3.10"
authors = [
  {name = "Christoph Fleckenstein"},
    {name = "Claudia Artiaco"}
]
maintainers = [
  {name = "Christoph Fleckenstein"}
]
readme = "README.md"
dependencies = ["cattrs",
    "pyyaml",
    "scipy",
    "numpy",
    "mpi4py",
    "quspin"
    ]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "pytest==8.0.0",
    "pytest-cov==3.0.0",
    "pytest-mpi==0.6",
    "mock==5.1.0",
    "ipython",
    "matplotlib",
    "jupyter"
]